# Beroozgar

./: .env  .gitignore  README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  routers.py  schemas.py  utils.py
frontend/: index.html  script.js  styles.css
tests/: conftest.py  test_apis.py
